--- a/package.json
+++ b/package.json
@@ -11,7 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
+    "multer": "^2.0.2",
     "sqlite3": "^5.1.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/illyrianmma/dojo-apps.git"
+  },
+  "bugs": {
+    "url": "https://github.com/illyrianmma/dojo-apps/issues"
+  },
+  "homepage": "https://github.com/illyrianmma/dojo-apps#readme"
 }
-
