--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.5.16",
     "express": "^5.1.0",
     "multer": "^2.0.2",
     "sqlite3": "^5.1.7"
