--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/illyrianmma/dojo-apps/issues"
   },
-  "homepage": "https://github.com/illyrianmma/dojo-apps#readme"
+  "homepage": "https://github.com/illyrianmma/dojo-apps#readme",
+  "engines": {
+    "node": "'20.x'"
+  }
 }
