--- a/package.json
+++ b/package.json
@@ -1,30 +1,18 @@
-{
+﻿{
   "name": "dojo-apps",
   "version": "1.0.0",
-  "description": "",
+  "description": "Martial arts school manager",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "James",
   "license": "ISC",
-  "dependencies": {
-    "adm-zip": "^0.5.16",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "multer": "^2.0.2",
-    "sqlite3": "^5.1.7"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/illyrianmma/dojo-apps.git"
-  },
-  "bugs": {
-    "url": "https://github.com/illyrianmma/dojo-apps/issues"
-  },
-  "homepage": "https://github.com/illyrianmma/dojo-apps#readme",
   "engines": {
-    "node": "'20.x'"
+    "node": ">=20"
+  },
+  "dependencies": {
+    "express": "4.19.2",
+    "sqlite3": "5.1.7"
   }
 }
