--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "node": ">=20"
   },
   "dependencies": {
-    "express": "4.19.2",
+    "express": "^4.19.2",
     "multer": "^2.0.2",
-    "sqlite3": "5.1.7"
+    "sqlite3": "^5.1.7"
   }
 }
